fixes #150 - buttons have align-items: center by default

--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -10,6 +10,7 @@
   display: inline-flex;
   flex-flow: row nowrap;
   align-content: center;
+  align-items: center;
   text-decoration: none;
 }
 
